--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,18 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified" >
         </activity>
+        <activity
+            android:name=".activity.LoanDetailActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustUnspecified" >
+        </activity>
+        <activity
+            android:name=".activity.ApplyLoanActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustUnspecified" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
