--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
             android:windowSoftInputMode="adjustUnspecified" >
         </activity>
         <activity
+            android:name=".activity.ForgetPwdActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustUnspecified" >
+        </activity>
+        <activity
             android:name=".activity.RegisterSubmitActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
