--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:windowSoftInputMode="adjustUnspecified" >
         </activity>
         <activity
-            android:name=".activity.RegisterSubmitActivity"
+            android:name=".activity.UpdateUserPwdActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified" >
