--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified" >
         </activity>
+        <activity
+            android:name=".activity.MyIncomeActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustUnspecified" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
