极光消息推送

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 23
     buildToolsVersion "24.0.0"
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     defaultConfig {
         applicationId "com.pudding.financeandroid"
         minSdkVersion 16
