--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,8 @@
             android:name=".activity.UserLoginActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustUnspecified" >
+            android:windowSoftInputMode="adjustUnspecified"
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name=".activity.MyOrderActivity"
